# c-take-home-tests

./: q2
.guides/: assessments.json  assessmentsAnswers.json  book.json  metadata.json
.guides/content/: Question-1-4746.md  Question-2-d01d.md  Question-3-81d4.md  Question-4-63c8.md
.guides/secure/: clean.sh  moveStdtCode.py  q1Grader.py  q2Grader.py  q3Grader.py  test.sh
.guides/secure/q1/: Makefile  Makefile.in  config.status
.guides/secure/q1/autom4te.cache/: output.2  requests  traces.0  traces.1
.guides/secure/q1/src/: Makefile  Makefile.am  Makefile.in  q1.h  q1.lo
.guides/secure/q1/src/.deps/: q1.Plo
.guides/secure/q1/src/.libs/: libq1.lai  libq1.so.0.0.0
.guides/secure/q1/tests/: Makefile  Makefile.am  Makefile.in  check_isLeapYr.c
.guides/secure/q1/tests/.deps/: check_isLeapYr-check_isLeapYr.Po
.guides/secure/q3/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
.guides/secure/q3/autom4te.cache/: requests  traces.2
.guides/secure/q3/src/: Makefile  Makefile.am  Makefile.in  libq1.la  q3.c  q3.h  q3.lo
.guides/secure/q3/src/.deps/: q3.Plo
.guides/secure/q3/src/.libs/: libq1.la  libq1.so.0.0.0
.guides/secure/q3/tests/: Makefile  Makefile.am  Makefile.in  check_f.c
.guides/secure/q3/tests/.deps/: check_f-check_f.Po
